Amend availability form styling

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -49,18 +49,20 @@
                             <fieldset>
                                 <legend class="sr-only">Select reading room</legend>
 
-                                <div id="room-selection-fieldset">
+                                <div>
                                     <label for="standard-room">Standard reading room</label>
                                     <input name="room-type" id="standard-room" type="radio" value="standard" checked />
                                 </div>
 
-                                <div id="camera-stand-fieldset">
+                                <div id="camera-stand-field">
                                     <label for="camera-stand">I would also like a camera stand</label>
                                     <input name="camera-stand" id="camera-stand" type="checkbox" />
                                 </div>
 
-                                <label for="map-and-lg-room">Map and large document</label>
-                                <input name="room-type" id="map-and-lg-room" type="radio" value="map-and-lg" />
+                                <div>
+                                    <label for="map-and-lg-room">Map and large document</label>
+                                    <input name="room-type" id="map-and-lg-room" type="radio" value="map-and-lg" />
+                                </div>
                             </fieldset>
                         </section>
 
