--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -30,15 +30,15 @@
             <div class="row">
                 <form>
                     <fieldset>
+                        <legend class="sr-only">Enter reader ticket number</legend>
+
                         <div>
                             <label for="reader-ticket-number">To reserve your space, enter your reader's ticket number</label>
                         </div>
 
                         <input id="reader-ticket-number" name="reader-ticket-number" type="text" placeholder="Enter ticket number" />
 
-                        <span>
-                            <button class="button" type="submit">Check ticket details</button>
-                        </span>
+                        <button class="button" type="submit">Check ticket details</button>
                     </fieldset>
                 </form>
                 <a href="/">How to register or renew your reader's ticket</a>
