Add advisory text to form

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -54,7 +54,7 @@
                                     <input name="room-type" id="standard-room" type="radio" value="standard" checked />
                                 </div>
 
-                                <div id="camera-stand-field">
+                                <div class="form-indent">
                                     <label for="camera-stand">I would also like a camera stand</label>
                                     <input name="camera-stand" id="camera-stand" type="checkbox" />
                                 </div>
@@ -62,6 +62,10 @@
                                 <div>
                                     <label for="map-and-lg-room">Map and large document</label>
                                     <input name="room-type" id="map-and-lg-room" type="radio" value="map-and-lg" />
+                                </div>
+
+                                <div class="form-indent">
+                                    <p>No camera stands avaiable in this room</p>
                                 </div>
                             </fieldset>
                         </section>
@@ -78,6 +82,10 @@
                                 <div>
                                     <label for="two-day-visit">Two-day visit</label>
                                     <input name="visit-length" id="two-day-visit" type="radio" value="two-day " />
+                                </div>
+
+                                <div class="form-indent">
+                                    <p>Two consecutive days (first day must be either Tues, Weds, Thurs or Fri)</p>
                                 </div>
                             </fieldset>
                         </section>
