--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -207,14 +207,6 @@ section.container {
     font-weight: bold;
 }
 
-#camera-stand-field {
-    margin-left: 2em;
-
-    label {
-        width: 80%;
-    }
-}
-
 #room-selection {
     border-bottom: 2px solid #eee;
 }
@@ -237,13 +229,29 @@ section.container {
             text-align: left;
 
             label {
-                margin-left: 2em;
+                font-size: 18px;
+                margin-left: .5em;
+                width: 80%;
             }
         }
     }
 
-    input[type=radio], input[type=checkbox] {
+    .form-indent {
+        margin-left: 2em;
+
+        label {
+            font-family: "Open Sans", sans-serif;
+            font-size: 16px;
+            width: 80%;
+        }
+    }
+
+    input[type=checkbox], input[type=radio] {
         float: left;
+    }
+
+    input[type=radio] {
+        margin-top: 7px;
     }
 }
 
