--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -7903,7 +7903,7 @@ section.container .container-heading, section.container .container-heading-text 
   clear: both;
 }
 
-.prompt {
+.bold-text {
   font-weight: bold;
 }
 
