--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -7844,6 +7844,25 @@ section.container .container-heading, section.container .container-heading-text 
   margin-top: 2em;
 }
 
+.bold-text {
+  font-weight: bold;
+}
+
+.booking-details {
+  margin-bottom: 2em;
+  text-align: left;
+}
+.booking-details div span {
+  border: 2px solid #ddd;
+}
+.booking-details h3 {
+  margin-bottom: 1em;
+  padding-left: 15px;
+}
+.booking-details table td, .booking-details table th {
+  border: 1px solid #ddd;
+}
+
 .booking-options form a, .booking-options form button {
   min-width: 205px;
 }
@@ -7872,6 +7891,17 @@ section.container .container-heading, section.container .container-heading-text 
 }
 .date-selection ul li a div p {
   margin-bottom: 0;
+}
+
+.order-form fieldset {
+  margin-top: 2em;
+}
+.order-form legend, .order-form p {
+  text-align: left;
+}
+.order-form .order-form-field {
+  margin-bottom: 1em;
+  text-align: left;
 }
 
 .order-options section.col-md-6 {
@@ -7903,10 +7933,6 @@ section.container .container-heading, section.container .container-heading-text 
   clear: both;
 }
 
-.bold-text {
-  font-weight: bold;
-}
-
 .reader-ticket-form {
   margin: 2em 0;
 }
@@ -7915,6 +7941,11 @@ section.container .container-heading, section.container .container-heading-text 
 }
 .reader-ticket-form div form {
   margin-bottom: 2em;
+}
+
+.prompt p {
+  border: 5px solid #ddd;
+  padding: 1em 0;
 }
 
 .reservation-options {
@@ -8029,9 +8060,9 @@ section.container .container-heading, section.container .container-heading-text 
     margin-top: 1em;
   }
 }
-@media screen and (min-width: 500px) {
-  .reader-ticket-form input[type=text] {
-    min-width: 400px;
+@media screen and (max-width: 640px) {
+  .order-form .col-xs-6 {
+    width: 100%;
   }
 }
 @media screen and (max-width: 350px) {
@@ -8044,6 +8075,11 @@ section.container .container-heading, section.container .container-heading-text 
   }
   #visit-customisation-form .col-md-4, #visit-customisation-form .col-sm-4 {
     padding-right: 0px;
+  }
+}
+@media screen and (min-width: 500px) {
+  .reader-ticket-form input[type=text] {
+    min-width: 400px;
   }
 }
 
