--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -21,6 +21,32 @@ section.container {
     }
 }
 
+.bold-text {
+    font-weight: bold;
+}
+
+.booking-details {
+    margin-bottom: 2em;
+    text-align: left;
+
+    div {
+        span {
+            border: 2px solid #ddd;
+        }
+    }
+
+    h3 {
+        margin-bottom: 1em;
+        padding-left: 15px;
+    }
+
+    table {
+        td, th {
+            border: 1px solid #ddd;
+        }
+    }
+}
+
 .booking-options {
     form {
 
@@ -68,6 +94,21 @@ section.container {
     }
 }
 
+.order-form {
+    fieldset {
+        margin-top: 2em;
+    }
+
+    legend, p {
+        text-align: left;
+    }
+
+    .order-form-field {
+        margin-bottom: 1em;
+        text-align: left;
+    }
+}
+
 .order-options {
     section.col-md-6 {
         display: inline-block;
@@ -106,10 +147,6 @@ section.container {
     clear: both;
 }
 
-.bold-text {
-    font-weight: bold;
-}
-
 .reader-ticket-form {
     margin: 2em 0;
 
@@ -122,6 +159,13 @@ section.container {
         form {
             margin-bottom: 2em;
         }
+    }
+}
+
+.prompt {
+    p {
+        border: 5px solid #ddd;
+        padding: 1em 0;
     }
 }
 
@@ -284,11 +328,10 @@ section.container {
     }
 }
 
-@media screen and (min-width: 500px) {
-    .reader-ticket-form {
-
-        input[type=text] {
-            min-width: 400px;
+@media screen and (max-width: 640px) {
+    .order-form {
+        .col-xs-6 {
+            width: 100%;
         }
     }
 }
@@ -315,6 +358,15 @@ section.container {
 
         .col-md-4, .col-sm-4 {
             padding-right: 0px;
+        }
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .reader-ticket-form {
+
+        input[type=text] {
+            min-width: 400px;
         }
     }
 }
