--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -18,48 +18,52 @@
             </div>
         </section>
 
-        <section class="order-options">
+        <section>
             <div class="row">
-                <section class="col-md-6">
-                    <div class="card">
-                        <div class="order-option-heading">
-                            <h2>Book a standard visit</h2>
-                            <p class="bold-text">400 spaces available</p>
+                <section class="order-option">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="order-option-heading">
+                                <h2>Book a standard visit</h2>
+                                <p class="bold-text">400 spaces available</p>
+                            </div>
+
+                            <ul>
+                                <li>Usually a 1-day visit</li>
+                                <li>Up to 12 documents for 1 day <span class="bold-text">or</span> 24 documents for 2 days</li>
+                                <li>Documents can be from different series, e.g. ADM 22 and C 142</li>
+                                <li>Computer access available</li>
+                            </ul>
+
+                            <a class="button primary" href="/standard-order-visit/availability">Select a date</a>
                         </div>
-
-                        <ul>
-                            <li>Usually a 1-day visit</li>
-                            <li>Up to 12 documents for 1 day <span class="bold-text">or</span> 24 documents for 2 days</li>
-                            <li>Documents can be from different series, e.g. ADM 22 and C 142</li>
-                            <li>Computer access available</li>
-                        </ul>
-
-                        <a class="button primary" href="/standard-order-visit/availability">Select a date</a>
                     </div>
                 </section>
 
-                <section class="col-md-6">
-                    <div class="card">
-                        <div class="order-option-heading">
-                            <h2>Book a bulk order visit</h2>
-                            <p class="bold-text">10 spaces available</p>
+                <section class="order-option">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="order-option-heading">
+                                <h2>Book a bulk order visit</h2>
+                                <p class="bold-text">10 spaces available</p>
+                            </div>
+
+                            <ul>
+                                <li>Usually a 2-day visit</li>
+                                <li>Between 20 - 40 documents</li>
+                                <li>Documents have to be from the same series, e.g. ADM 1 - ADM 20</li>
+                                <li>Computer access available</li>
+                            </ul>
+
+                            <a class="button primary" href="/bulk-order-visit/availability">Select a date</a>
                         </div>
-
-                        <ul>
-                            <li>Usually a 2-day visit</li>
-                            <li>Between 20 - 40 documents</li>
-                            <li>Documents have to be from the same series, e.g. ADM 1 - ADM 20</li>
-                            <li>Computer access available</li>
-                        </ul>
-
-                        <a class="button primary" href="/bulk-order-visit/availability">Select a date</a>
                     </div>
                 </section>
             </div>
 
-            <div class="row">
-                <section class="col-md-12">
-                    <div id="computer-only">
+            <section id="computer-only">
+                <div class="row">
+                    <div class="col-md-12">
                         <h2>Book to use a computer only</h2>
 
                         <div class="container">
@@ -69,11 +73,8 @@
                             </p>
                         </div>
                     </div>
-                </section>
-            </div>
-
+                </div>
+            </section>
         </section>
-
     </section>
-
 </div>
