path base redirection added

--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -47,7 +47,7 @@
                     </span>
 
                     <span class="col-md-6">
-                        <a class="button primary" href="/">I'd like to continue later</a>
+                        <a class="button primary" href="#">I'd like to continue later</a>
                     </span>
                 </div>
             </div>
