--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -14,16 +14,16 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    @Html.Partial("_Header")
+    @Html.PartialAsync("_Header")
     
 
     <main role="main" class="pb-3">
         <div class="container">
-            @Html.Partial("_Breadcrumbs")
+            @Html.PartialAsync("_Breadcrumbs")
             @RenderBody()
         </div>
     </main>
 
-    @Html.Partial("_Footer")
+    @Html.PartialAsync("_Footer")
 </body>
 </html>
