added missing await

--- a/book-a-reading-room-visit.web/Views/Shared/_Footer.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Footer.cshtml
@@ -1,9 +1,9 @@
 ﻿<footer id="footer" role="contentinfo">
     <h2 class="sr-only">Footer</h2>
-    @Html.PartialAsync("_FooterNewsletter")
+    @await Html.PartialAsync("_FooterNewsletter")
     <div class="footer-content">
         <div class="container">
-            @Html.PartialAsync("_FooterContent")
+            @await Html.PartialAsync("_FooterContent")
         </div>
     </div>
 </footer>
