--- a/book-a-reading-room-visit.web/Views/Shared/_Header.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Header.cshtml
@@ -27,6 +27,6 @@
 
 <nav id="nav" role="navigation" class="navigation">
     <div class="mega-menu clearfix">
-        @Html.PartialAsync("_MegaMenu")
+        @await Html.PartialAsync("_MegaMenu")
     </div>
 </nav>
