--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -33,16 +33,16 @@
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    @Html.PartialAsync("_Header")
+    @await Html.PartialAsync("_Header")
 
 
     <main role="main" class="pb-3">
         <div class="container">
-            @Html.PartialAsync("_Breadcrumbs")
+            @await Html.PartialAsync("_Breadcrumbs")
             @RenderBody()
         </div>
     </main>
 
-    @Html.PartialAsync("_Footer")
+    @await Html.PartialAsync("_Footer")
 </body>
 </html>
