--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model book_a_reading_room_visit.web.Models.AvailabilitySummaryViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -25,7 +26,7 @@
                         <div class="card">
                             <div class="order-option-heading">
                                 <h2>Book a standard visit</h2>
-                                <p class="bold-text">400 spaces available</p>
+                                <p class="bold-text">@Model.StandardBookingAvailable spaces available</p>
                             </div>
 
                             <ul>
@@ -45,7 +46,7 @@
                         <div class="card">
                             <div class="order-option-heading">
                                 <h2>Book a bulk order visit</h2>
-                                <p class="bold-text">10 spaces available</p>
+                                <p class="bold-text">@Model.BulkBookingsAvailable spaces available</p>
                             </div>
 
                             <ul>
