Minor editorial changes to homepage

--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                             </div>
 
                             <ul>
-                                <li>Usually a 1-day visit</li>
+                                <li>1-day visit</li>
                                 <li>Up to 12 documents for 1 day <span class="bold-text">or</span> 24 documents for 2 days</li>
                                 <li>Documents can be from different series, e.g. ADM 22 and C 142</li>
                                 <li>Computer access available</li>
@@ -50,7 +50,7 @@
                             </div>
 
                             <ul>
-                                <li>Usually a 2-day visit</li>
+                                <li>2-day visit</li>
                                 <li>Between 20 - 40 documents</li>
                                 <li>Documents have to be from the same series, e.g. ADM 1 - ADM 20</li>
                                 <li>Computer access available</li>
