Change availability page h1 text

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -6,7 +6,7 @@
 
 @model OrderType
 
-<h1 class="display-4">Welcome to book a reading room visit</h1>
+<h1 class="display-4">1. Select a date</h1>
 
 <div class="text-center">
 
